--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+    <div>
         <header>
             <h1><i><b>New 7 wonders of the world</b></i></h1>
         </header><hr><br>
@@ -134,6 +135,7 @@
             </nav><br><br>
             Developed by Yasir Arafat
         </footer>
+      </div>
       </div>
 </body>
 </html>
